# spotify-to-offline

./: .gitignore  1_setup_sldl.ps1  3_download_all.ps1  4_generate_m3u.py  Cargo.toml  README.md  RUST_REWRITE.md  install.ps1  install.sh  run.py
.github/workflows/: ci.yml  release.yml
python_legacy/: 1_setup.py  2_prep_csvs.py  3_download_all.ps1  run.py  run.sh
python_legacy/example/: my_playlist.csv
src/: config.rs  dap.rs  db.rs  download.rs  import.rs  install.rs  m3u.rs  main.rs  notify.rs  providers.rs  sldl_setup.rs  tags.rs  ui.rs
src/providers/: mod.rs  soulseek.rs  ytdlp.rs
src/ui/: mod.rs  render.rs  settings.rs
