[package]
name    = "spotify-to-offline"
version = "0.1.0"
edition = "2021"
description = "Spotify → FLAC → DAP: batch-download playlists and generate M3U files"
license     = "MIT"
readme      = "README.md"

# See RUST_REWRITE.md for porting status and roadmap.
# Current status: scaffold only — use run.py / run.bat / run.sh in the meantime.

[[bin]]
name = "s2o"
path = "src/main.rs"

[dependencies]
clap      = { version = "4",   features = ["derive"] }
serde     = { version = "1",   features = ["derive"] }
toml      = "0.8"
colored   = "2"
indicatif = "0.17"
csv       = "1.3"
dirs      = "5"
anyhow    = "1"
